--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -14,18 +14,24 @@ body {
 button:focus {outline:0 !important;}
 
 .graph { 
-    width: 1000px;
-    /*background-image: url("../../assets/images/map.png");*/
+    /* background-image: url("../../assets/images/map.png"); */
     background-repeat: no-repeat;
     overflow: hidden;
 }
 
-#results {
+.de-container { 
+    padding: 10px;
+    background: #FFFFFF;
+    border: 1px solid #ddd;
+    border-top-color: transparent;
+}
+
+#results { 
     background: #FFFFFF;
 }
 
-.auto-width {
-    width: auto !important;
+.auto-width { 
+    /* width: auto !important; */
 }
 
 .borderless { 
