--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -14,7 +14,7 @@ body {
 button:focus {outline:0 !important;}
 
 .graph { 
-    /* background-image: url("../../assets/images/map.png"); */
+    /**background-image: url("../../assets/images/map.png");**/
     background-repeat: no-repeat;
     overflow: hidden;
 }
