--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -46,3 +46,23 @@ button:focus {outline:0 !important;}
     color: #4A4A4A;
     background: rgba(172, 172, 172, 0.51);
 }
+
+.btn-file {
+    position: relative;
+    overflow: hidden;
+}
+.btn-file input[type=file] {
+    position: absolute;
+    top: 0;
+    right: 0;
+    min-width: 100%;
+    min-height: 100%;
+    font-size: 100px;
+    text-align: right;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    outline: none;
+    background: white;
+    cursor: inherit;
+    display: block;
+}
