--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -25,8 +25,18 @@ button:focus {outline:0 !important;}
     border-top-color: transparent;
 }
 
-#results { 
-    background: #FFFFFF;
+.control-label { 
+    border-radius: 4px;
+    padding: 7px;
+    width: 80px;
+}
+
+h4 {
+    font-family: verdana;
+}
+
+#results p, #results ul li { 
+    margin: 10px;
 }
 
 .auto-width { 
